# SDD-Portfolio-Delivery-and-Economic-Flow-Governance-Engine

./: LICENSE  README.md
.github/workflows/: deploy-dashboard.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
sdd/: .deploy  .gitignore  CLAUDE.md  README.md  pyproject.toml
sdd/.specify/integrations/: claude.manifest.json  speckit.manifest.json
sdd/.specify/memory/: constitution.md
sdd/specs/001-portfolio-delivery-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sdd/specs/001-portfolio-delivery-engine/checklists/: requirements.md
sdd/specs/001-portfolio-delivery-engine/contracts/: input-schema.md  output-schema.md  python-api.md
sdd/src/delivery_engine/: __init__.py  cli.py  config.py  engine.py
sdd/src/delivery_engine/calculators/: cost_of_delay.py  cycle_time.py  flow_efficiency.py  roi_scatter.py
sdd/src/delivery_engine/dashboard/: app.py  static.py
sdd/src/delivery_engine/io/: exporter.py  loader.py
sdd/src/delivery_engine/models/: __init__.py  portfolio.py  team.py  work_item.py  workstream.py
sdd/tests/fixtures/: portfolio_large.json  portfolio_minimal.json  strategic_delivery_data.csv  work_item_events_large.csv  work_item_events_minimal.csv
