[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delivery-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "polars>=0.20",
    "plotly>=5.18",
    "dash>=2.14",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-benchmark>=4.0",
]

[project.scripts]
delivery-engine = "delivery_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
